# rust-attiny85-example

./: Cargo.toml  build.sh
.cargo/: config.toml
src/: main.rs  switch.rs  switch_timer.rs  timer.rs
